Red5 Changelog
==============

This file contains informations about the changes between the different
versions of Red5.

Red5 0.6    (unreleased)
------------------------
Bugfixes:
- last frames aren't lost when reading .flv files (Trac #90)
- FileConsumer acted on all consumer pipe events (Trac #92)


Red5 0.5    (2006-07-25)
------------------------
New features:
- frame dropping for live streams depending on available bandwidth
- added "receiveAudio", "receiveVideo" and "send" for streams
- destination of recorded streams can be customized (Trac #73)
- VOD stream flow control adapts bandwidth based on buffer time (Trac #63)
- up-/downstream bandwidth can be specified

Bugfixes:
- only the same instances are serialized as references (Trac #58)
- re-added JSP support in manifest file of red5.jar (Trac #59)
- "tagPosition" is updated in FLVReader when seeking (Trac #55)
- automatic subscopes of the host scope are disabled so only connections
  to existing applications are possible
- running "ant" after setup keeps wrapper configuration (Trac #76)
- mp3 files with unsupported sample rates are detected (Trac #66)
- timestamps of recorded .flv files were wrong sometimes (Trac #78)
- stream types could be reused leading to a ClassCastException (Trac #84)
- "ns.pause" working if no flag given (Trac #67)
- a keyframe is sent for paused streams when seeking


Red5 0.5rc1 (2006-07-11)
------------------------
New features:
- refactored streaming code
- refactored scope services
- refactored rtmp message de-/encoding
- enabled subscopes
- bandwidth control for on-demand streams
- experimental support for serverside streams
- added dynamic "onMetaData" for mp3 streams
- added persistence for scopes and shared objects
- added support for simple "directory-only" applications
- added remoting client support (sync / async)
- added deserializer for RecordSet remoting results
- arbitrary objects can be registered as service handlers